@@ -1,3 +1,7 @@
+* 2012-05-19 - thorben.betten@open-xchange.com
+
+ - Fix for bug 22051: Re-parse Content-Type with regexes
+
 * 2012-05-14 - thorben.betten@open-xchange.com
 
  - Fix for bug 22128: Fall-back if user configuration cannot be loaded
